@@ -96,7 +96,7 @@ Template for new versions:
 - ``Maps::setAreaAquifer``: make all tiles in a cuboid into aquifers, with the option to provide a filter
 - ``Maps::removeTileAquifer``: remove aquifer from tile
 - ``Maps::removeAreaAquifer``: remove aquifers from all tiles in a cuboid, with the option to provide a filter
-- ``Units::makeown``: API to use bay12-provided entry point for "makeown" operation
+- ``Units::create``, ``Units::makeown``: new APIs to use bay12-provided entry points for low-level operations
 
 ## Lua
 - ``dfhack.gui.getSelectedJob``: can now return the job with a destination under the keyboard cursor (e.g. digging/carving/engraving jobs)
@@ -113,6 +113,7 @@ Template for new versions:
 - ``dfhack.maps.removeTileAquifer``: remove aquifer from tile
 - ``plugins.tiletypes.tiletypes_setTile``: can now accept a table for access to previously unavailable options
 - ``dialogs.showYesNoPrompt``: extend options so the standard dialog can be used for `gui/confirm`-style confirmation prompts
+- ``dfhack.units.create``, ``dfhack.units.makeown``: Lua access to new module API
 
 ## Removed
 - `plants`: renamed to `plant`
